fix aritcleにoverflow-x付けて強制的に壊れを防ぐ

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -40,6 +40,7 @@ body {
 }
 article {
 	max-width: var(--article-max-width);
+	overflow-x: hidden;
 	margin: 0 auto;
 }
 p {
